--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>com.miaoshaproject</groupId>
   <artifactId>miaosha</artifactId>
   <version>1.0-SNAPSHOT</version>
-
   <name>miaosha</name>
-  <!-- FIXME change it to the project's website -->
   <url>http://www.example.com</url>
   <parent>
     <groupId>org.springframework.boot</groupId>
@@ -21,7 +18,6 @@
     <maven.compiler.source>1.7</maven.compiler.source>
     <maven.compiler.target>1.7</maven.compiler.target>
   </properties>
-
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -93,13 +89,11 @@
             <!--允许移动生成的 文件 -->
               <verbose>true</verbose>
             <!-- 允许自动覆盖文件！！！切记是项目不可以 -->
-              <overwrite>true</overwrite>
+              <overwrite>false</overwrite>
           <configurationFile>
             src/main/resources/mybatis-generator.xml
           </configurationFile>
           </configuration>
-
-
         </plugin>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
