Item模型的设计与实现

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #端口的配置
 server.port=8090
-mybatis.mapperLocations=classpath:mapping/*xml
+#mybatis.mapperLocations=classpath:mapping/*xml
+mybatis.mapper-locations=classpath:/mapping/*Mapper.xml
 
 #数据源的配置
 spring.datasource.name=miaosha
